Project

General

Profile

Actions

Bug #47215

closed

server: Fix incorrect order of args passed to unused add_request() versions.

Added by Sridhar Seshasayee over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

100%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
09/10/2020
Affected Versions:
ceph-qa-suite:
Crash signature (v1):
Crash signature (v2):
Actions #3

Updated by Sridhar Seshasayee over 3 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Sridhar Seshasayee over 3 years ago

  • Status changed from Fix Under Review to Resolved
  • % Done changed from 0 to 100
  • Reviewed set to 09/10/2020

Marking it resolved as the fix is now merged.

Actions

Also available in: Atom PDF