server: Fix argument order passed to unused add_request() versions.

Fix the order of arguments (req_params and client_id) passed to a couple
of unused PushPriorityQueue and PullPriorityQueue add_request() versions.
Also, apply missing 'move' semantics to the request reference argument.

Add a couple of unit tests to exercise the above versions of add_request().

Fixes: https://tracker.ceph.com/issues/47215
Signed-off-by: Sridhar Seshasayee <sseshasa@redhat.com>